# vrroompy

./: .gitignore  BuildAndDeployPackage.bat  BuildAndDeployPackage.configured.bat  README.md  StartVrroomClient.bat  SwitchVrroomInputs.bat  UnitTestScripts.bat  pyproject.toml  requirements.txt
docs/: remaining_commands.txt
examples/: ControlVrroomSwitch.bat  ExecuteVrroomActions.bat  GetAllSwitchValues.bat  SwitchVrroomInputs.bat  execute_vrroom_actions.py  get_all_switch_values.py  switch_vrroom_inputs.py
python/: control_vrroom_switch.py  switch_vrroom_inputs.py
python/test/: test_codec.py  test_commands_base.py  test_commands_input.py  test_commands_operation_mode.py  test_socket.py
python/vrroompy/: codec.py  socket.py
python/vrroompy/commands/: __init__.py  input.py  operation_mode.py
src/vrroompy/: codec.py  exceptions.py
src/vrroompy/commands/: __init__.py  actions.py  enums.py  input.py  modes.py  network.py
tests/: test_codec.py  test_commands_actions.py  test_commands_base.py  test_commands_enums.py  test_commands_input.py  test_commands_modes.py  test_commands_network.py  test_commands_operation_mode.py
