[project]
name = "VRROOMpy"
version = "1.0.0"
authors = [
  { name="Vincent Kocks", email="engineering@vingenuity.net" },
]
description = "Package for controlling HDFury VRROOM HDMI switches via Python."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vingenuity/vrroompy"
"Bug Tracker" = "https://github.com/vingenuity/vrroompy/issues"

[project.optional-dependencies]
dev = ["black ~= 22.0", "coverage == 6.5"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
